# phylo-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: main.rs
examples/: pairwise-distances.rs  phylogenetic-diversity.rs
examples/pairwise-distances/: sample-trees.trees
examples/phylogenetic-diversity/trees/1a.1.1/: 2015-01_1a.1.1.treefile  2016-01_1a.1.1.treefile  2017-01_1a.1.1.treefile  2018-01_1a.1.1.treefile  2021-01_1a.1.1.treefile
examples/phylogenetic-diversity/trees/1a.1.1.3/: 2015-01_1a.1.1.3.treefile  2016-01_1a.1.1.3.treefile  2017-01_1a.1.1.3.treefile  2018-01_1a.1.1.3.treefile  2019-01_1a.1.1.3.treefile  2020-01_1a.1.1.3.treefile  2021-01_1a.1.1.3.treefile  2022-01_1a.1.1.3.treefile  2023-01_1a.1.1.3.treefile
examples/phylogenetic-diversity/trees/1a.2/: 2015-01_1a.2.treefile  2016-01_1a.2.treefile  2017-01_1a.2.treefile  2018-01_1a.2.treefile  2019-01_1a.2.treefile  2020-01_1a.2.treefile
examples/phylogenetic-diversity/trees/1a.3.3.2/: 2015-01_1a.3.3.2.treefile  2016-01_1a.3.3.2.treefile  2017-01_1a.3.3.2.treefile  2018-01_1a.3.3.2.treefile  2019-01_1a.3.3.2.treefile  2020-01_1a.3.3.2.treefile  2021-01_1a.3.3.2.treefile  2022-01_1a.3.3.2.treefile  2023-01_1a.3.3.2.treefile
examples/phylogenetic-diversity/trees/1a.3.3.3-c1/: 2015-01_1a.3.3.3-c1.treefile  2016-01_1a.3.3.3-c1.treefile  2017-01_1a.3.3.3-c1.treefile  2018-01_1a.3.3.3-c1.treefile  2019-01_1a.3.3.3-c1.treefile  2020-01_1a.3.3.3-c1.treefile  2021-01_1a.3.3.3-c1.treefile  2022-01_1a.3.3.3-c1.treefile  2023-01_1a.3.3.3-c1.treefile
examples/phylogenetic-diversity/trees/1a.3.3.3-c2/: 2015-01_1a.3.3.3-c2.treefile  2016-01_1a.3.3.3-c2.treefile  2018-01_1a.3.3.3-c2.treefile  2019-01_1a.3.3.3-c2.treefile
examples/phylogenetic-diversity/trees/1a.3.3.3-c3/: 2015-01_1a.3.3.3-c3.treefile  2016-01_1a.3.3.3-c3.treefile  2017-01_1a.3.3.3-c3.treefile  (+6 more)
examples/visualization/: pd.py  requirements.txt  tree-space.py
src/: bin.rs  error.rs  iter.rs  lib.rs  node.rs  taxa.rs  tree.rs
src/iter/: edge_iter.rs  node_iter.rs
src/node/: simple_rnode.rs  simple_rt_node.rs  simple_unode.rs
src/tree/: ##simple_rtree.org##  #simple_rtree.org#  #simple_rtree.rs#  .##simple_rtree.org#  .#tree.org  distances.rs  io.rs  ops.rs  simple_rtree.rs  simulation.rs  weighted.rs
tests/: node-tests.rs  tree-tests.rs
(+32 files in other folders)
