[package]
name = "phylo"
version = "0.1.0"
edition = "2021"

authors = [
  "Sriram Vijendran"
]
license = "MIT"
readme = ""

repository = "https://github.com/sriram98v/phylo-rs"
readme = "README.md"

description = "An extensible Phylogenetics library written in rust"

keywords = ["bioinformatics", "phylogenetics"]
categories = ["data-structures", "science"]

[lib]
name = "phylo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.83"
itertools = "0.11.0"
num = "0.4.1"
rand = "0.8.5"
clap = {version="4.5.4", optional=true}
indicatif = {version="0.17.8", optional=true}
rayon = "1.10.0"
fxhash = "0.2.1"
vers-vecs = "1.3.1"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "main"
harness = false

[features]
build-binary = ["clap", "indicatif"]

[[bin]]
name = "phylo-rs"
path = "src/bin.rs"
required-features = ["build-binary"]
