[package]
name = "phylo"
version = "0.3.2"
edition = "2021"

authors = [
  "Sriram Vijendran"
]
license = "MIT"

repository = "https://github.com/sriram98v/phylo-rs"
readme = "README.md"

description = "An extensible Phylogenetics library written in rust"

keywords = ["bioinformatics", "phylogenetics"]
categories = ["data-structures", "science"]

[lib]
name = "phylo"
path = "src/lib.rs"

[dependencies]
itertools = "0.11.0"
num = "0.4.1"
rand = "0.8.5"
rayon = "1.10.0"
fxhash = "0.2.1"
vers-vecs = "1.3.1"
thiserror = "1.0.65"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "main"
harness = false
