[package]
name = "phylo"
version = "0.3.2"
edition = "2021"

authors = ["Sriram Vijendran"]
license = "MIT"

repository = "https://github.com/sriram98v/phylo-rs"
readme = "README.md"

description = "An extensible Phylogenetics library written in rust"

keywords = ["bioinformatics", "phylogenetics"]
categories = ["data-structures", "science"]

[lib]
name = "phylo"
path = "src/lib.rs"

[features]
default = ["non_crypto_hash", "simple_rooted_tree"]
non_crypto_hash = ["dep:fxhash"]
simple_rooted_tree = []

[dependencies]
itertools = "0.11.0"
num = "0.4.1"
rand = "0.8.5"
fxhash = { version = "0.2.1", optional = true }
vers-vecs = "1.5.1"
thiserror = "1.0.65"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "main"
harness = false
